completed and test publish to pypi

--- a/tests/fixtures/test.yaml
+++ b/tests/fixtures/test.yaml
@@ -1,38 +1,29 @@
-common: 
+common:
+  modulepaths:
+    - None
   modules:
-    - PrgEnv-intel/$PrgEnv_intel_ver
-    - craype/$craype_ver
-    - intel/$intel_ver
-    - prod_util/$prod_util_ver
-  environment:
-    - WGRIB2: wgrib2
-  modulepaths:
-      - /lfs/h2/emc/global/save/emc.global/git/prepobs/module
-  help: >
-    Load environment to run prep job on WCOSS2
-  whatis: >
-      An example of what is.
+    - PrgEnv-intel/${PrgEnv_intel_ver}
+    - craype/${craype_ver}
+    - intel/${intel_ver}
+    - prod_util/${prod_util_ver}
 eobs:
-  modules: 
-    - cray-pals/$cray_pals_ver
-    - python/$python_ver
-    - hdf5/$hdf5_ver
-    - netcdf/$netcdf_ver
-    - crtm/$crtm_ver
-
-  modulepaths:
-      - /lfs/h2/emc/global/save/emc.global/git/prepobs/module
-
+  help: Load environment to run eobs job on WCOSS2
+  whatis: eobs run environment
+  modules:
+    - cray-mpich/${cray_mpich_ver}
+    - cray-pals/${cray_pals_ver}
+    - python/${python_ver}
+    - hdf5/${hdf5_ver}
+    - netcdf/${netcdf_ver}
+    - crtm/${crtm_ver}
 prep:
-  # modules: 
-  modules: 
-    - hdf5/$hdf5_ver
-    - netcdf/$netcdf_ver
-    - cray-mpich/$cray_mpich_ver
-    
+  help: Load environment to run prep job on WCOSS2
+  whatis: prep run environment
+  modules:
+    - hdf5/${hdf5_ver}
+    - netcdf/${netcdf_ver}
   extra:
     modulepaths:
       - /lfs/h2/emc/global/save/emc.global/git/prepobs/module
     modules:
-      - prepobs/$prepobs_ver
-      # - *flag
+      - prepobs/${prepobs_ver}
