--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@
 #    pip-compile --extra=dev pyproject.toml
 #
 black==23.3.0
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 build==0.10.0
     # via pip-tools
 bumpver==2023.1124
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 click==8.1.3
     # via
     #   black
@@ -22,7 +22,7 @@ exceptiongroup==1.1.1
 iniconfig==2.0.0
     # via pytest
 isort==5.12.0
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 lexid==2021.1006
     # via bumpver
 looseversion==1.2.0
@@ -39,7 +39,7 @@ pathlib2==2.3.7.post1
 pathspec==0.11.1
     # via black
 pip-tools==6.14.0
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 platformdirs==3.8.0
     # via black
 pluggy==1.2.0
@@ -47,9 +47,9 @@ pluggy==1.2.0
 pyproject-hooks==1.0.0
     # via build
 pytest==7.4.0
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 pyyaml==6.0
-    # via wrangler (pyproject.toml)
+    # via gwf-wrangler (pyproject.toml)
 six==1.16.0
     # via pathlib2
 toml==0.10.2
