--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,5 +49,5 @@ tag = true
 push = true
 
 [tool.bumpver.file_patterns]
-"pyproject.toml" = ['version = "{current_version}"']
+"pyproject.toml" = ['']
 "README.md" = ["{pep440_version}"]
