--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,20 @@
 #
 black==23.3.0
     # via gwf-wrangler (pyproject.toml)
+bleach==6.0.0
+    # via readme-renderer
 build==0.10.0
-    # via pip-tools
+    # via
+    #   gwf-wrangler (pyproject.toml)
+    #   pip-tools
 bumpver==2023.1124
     # via gwf-wrangler (pyproject.toml)
+certifi==2023.5.7
+    # via requests
+cffi==1.15.1
+    # via cryptography
+charset-normalizer==3.1.0
+    # via requests
 click==8.1.3
     # via
     #   black
@@ -17,16 +27,40 @@ click==8.1.3
     #   pip-tools
 colorama==0.4.6
     # via bumpver
+cryptography==41.0.1
+    # via secretstorage
+docutils==0.20.1
+    # via readme-renderer
 exceptiongroup==1.1.1
     # via pytest
+idna==3.4
+    # via requests
+importlib-metadata==6.7.0
+    # via
+    #   keyring
+    #   twine
 iniconfig==2.0.0
     # via pytest
 isort==5.12.0
     # via gwf-wrangler (pyproject.toml)
+jaraco-classes==3.2.3
+    # via keyring
+jeepney==0.8.0
+    # via
+    #   keyring
+    #   secretstorage
+keyring==24.2.0
+    # via twine
 lexid==2021.1006
     # via bumpver
 looseversion==1.2.0
     # via bumpver
+markdown-it-py==3.0.0
+    # via rich
+mdurl==0.1.2
+    # via markdown-it-py
+more-itertools==9.1.0
+    # via jaraco-classes
 mypy-extensions==1.0.0
     # via black
 packaging==23.1
@@ -40,18 +74,42 @@ pathspec==0.11.1
     # via black
 pip-tools==6.14.0
     # via gwf-wrangler (pyproject.toml)
+pkginfo==1.9.6
+    # via twine
 platformdirs==3.8.0
     # via black
 pluggy==1.2.0
     # via pytest
+pycparser==2.21
+    # via cffi
+pygments==2.15.1
+    # via
+    #   readme-renderer
+    #   rich
 pyproject-hooks==1.0.0
     # via build
 pytest==7.4.0
     # via gwf-wrangler (pyproject.toml)
 pyyaml==6.0
     # via gwf-wrangler (pyproject.toml)
+readme-renderer==40.0
+    # via twine
+requests==2.31.0
+    # via
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==1.0.0
+    # via twine
+rfc3986==2.0.0
+    # via twine
+rich==13.4.2
+    # via twine
+secretstorage==3.3.3
+    # via keyring
 six==1.16.0
-    # via pathlib2
+    # via
+    #   bleach
+    #   pathlib2
 toml==0.10.2
     # via bumpver
 tomli==2.0.1
@@ -59,9 +117,20 @@ tomli==2.0.1
     #   black
     #   build
     #   pip-tools
+    #   pyproject-hooks
     #   pytest
+twine==4.0.2
+    # via gwf-wrangler (pyproject.toml)
+urllib3==2.0.3
+    # via
+    #   requests
+    #   twine
+webencodings==0.5.1
+    # via bleach
 wheel==0.40.0
     # via pip-tools
+zipp==3.15.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
