--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "gwf_wrangler"
 description = "A python package to convert yaml files to lua scripts for the Global Workflow Project."
 readme = "README.md"
-version = "0.0.3"
+version = "0.0.4"
 dependencies = ["PyYAML"]
 authors = [{ name = "Ryan Long", email = "ryan.long@noaa.gov" }]
 keywords = ["globalworkflow", "global workflow", "esmf"]
@@ -32,14 +32,6 @@ wrangler = "src.__main__:main"
 [tool.setuptools.packages]
 find = {} # Scan the project directory with the default parameters
 
-[tool.versioneer]
-VCS = "git"
-style = "pep440"
-versionfile_source = "src/wrangler/_version.py"
-versionfile_build = "wrangler/_version.py"
-tag_prefix = ""
-# parentdir_prefix = "myproject-"
-
 [tool.bumpver]
 current_version = "0.0.4"
 version_pattern = "MAJOR.MINOR.PATCH"
@@ -49,4 +41,5 @@ tag = true
 push = true
 
 [tool.bumpver.file_patterns]
+"pyproject.toml" = ['version = "{current_version}"']
 "README.md" = ["{pep440_version}"]
